--- a/css/core.css
+++ b/css/core.css
@@ -59,6 +59,10 @@ li{
   margin: 0;
   margin-bottom: 5px;
 }
+.no-space{
+  margin: 0;
+
+}
 .none{
   opacity: 0;
 }
@@ -286,15 +290,19 @@ hr.hrcenter{
   transition: .3s;
 }
 .promoted a:hover .media{
-  background: #ddd;
+  color: rgb(49, 145, 193);
 }
 .promoted .media{
   padding-left: 0px;
   padding-top: 15px;
 }
-.promoted .media-object{
+.promoted .media-left{
+  overflow: hidden;
   width: 70px;
   max-height: 90px;
+}
+.promoted .media-object{
+  width: 70px;
 }
 .garisbawah{
   padding-bottom: 5px;
@@ -347,6 +355,14 @@ div.kategori h2{
   font-size: 1.6em;
   margin-bottom: 0;
 }
+.featured li{
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+}
+.featured .attention{
+  padding: 5px 0;
+}
 .featured small{
   display: inline-block;
   margin-top: -5px;
@@ -392,10 +408,7 @@ nav#top-bar{
 }
 .navbar-fixed-top{
   background: white;
-  box-shadow: 0 1px 3px rgba(43, 43, 43, 0.57);
-}
-nav#top-bar input{
-  width: 700px;
+  box-shadow: 0 1px 2px rgba(43, 43, 43, 0.3);
 }
 nav#top-bar li > a{
   font-size:
@@ -409,10 +422,17 @@ nav#top-bar li > a:hover{
 /*Endnavbar*/
 
 /*Sign up*/
+.headercontact .cover{
+  color: inherit;
+}
 .contact{
 	padding:1em 0 3em;
+  position: relative;
 }
-.text-box input,.textarea textarea,
+.contact .well{
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.text-box input, .textarea textarea,
 .text-box select.form-control{
 	border: 2px solid #E5E5E5;
 	width: 100%;
@@ -431,10 +451,10 @@ nav#top-bar li > a:hover{
 	-o-transition:0.5s all;
 	outline:none;
 }
-.text-box select.form-control{
-  height: 47px;
+select.form-control{
+  height: 51px;
   border: 2px solid #E5E5E5;
-  background-image: linear-gradient(#ffe 70%, rgba(196, 196, 196,.5));
+  border-color: rgb(165, 149, 222);
 }
 .text-box input:hover,
 .textarea textarea:hover,
@@ -444,11 +464,16 @@ nav#top-bar li > a:hover{
 .text-box select.form-control:focus{
 	border-color: rgba(231, 76, 60, 0.55);
 }
-.contact h4{
-	color: #666;
-	font-size: 2.5em;
-	font-weight: 300;
-	text-align:center;
+.contact button{
+  width: 100%;
+  border-radius: 3px;
+}
+.contact .login button{
+  width: 40%;
+  border-radius: 3px;
+}
+.contact .login h3{
+  margin-bottom: 20px;
 }
 .contact-head{
 	color: #858585;
@@ -459,34 +484,11 @@ nav#top-bar li > a:hover{
 	margin: 0 auto;
 	padding: 0.8em 0 1em;
 }
-.btn-red-lg{
-  color: white !important;
-	background: #E74C3C 17px 21px;
-	border: 1px solid #E74C3C;
-	transition: 0.5s all;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-o-transition: 0.5s all;
-	font-size: 1.2em;
-	padding: 1em 2em;
-	margin: 0 auto;
-	display: inherit;
-}
-.btn-red-lg:hover,
-.btn-red-lg:focus{
-	background: #D34738 17px 21px;
-}
 section.contact > div.container.well.well-lg{
   padding: 30px 100px;
 }
 section.contact input{
   margin-bottom: 10px;
-}
-.input1::before{
-  content: "\f007";
-}
-.input2::before{
-  content: "\f023";
 }
 section.contact .login{
   position: relative;
@@ -498,21 +500,23 @@ section.contact .login{
   background: rgba(255, 255, 255, 0.5);
 }
 .icon{
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 50%;
+  background: rgb(255, 255, 255);
   padding:  33px 25px;
+  padding-bottom: 0;
   position: absolute;
   left: 50%;
-  margin-left: -75px;
-  top: -50px;
+  top: -70px;
+  font-size: 20px;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
-
+.contact p{
+  font-size: 1em;
+}
 /*End of signUp*/
 
 /*footer*/
-footer{
-  margin-top: 150px;
-}
 footer h2{
   font-size: 1.2em;
   color: #eee;
@@ -536,6 +540,7 @@ footer h4.text-center.text-muted{
 }
 .darklight{
   background:#333566;
+  margin-top: 150px;
 }
 .fade-up{
   margin-top: -100px;
@@ -600,3 +605,37 @@ footer img.guadev{
   width: auto;
 }
 /*endoffooter*/
+.page{
+  margin-top: 60px;
+}
+.page .list-group{
+  line-height: 30px;
+  font-size: .8em;
+}
+.page .list-group input{
+  background: rgb(63, 76, 251);
+}
+.page .list-group p{
+  margin-left: 15px;
+}
+.page .panelkiri h2{
+  font-size: 1em;
+}
+.page .panelkiri select.form-control{
+  padding: .1em;
+  width: 100%;
+  height: 30px;
+}
+.page h1{
+  font-size: 1.5em;
+}
+.page .promoted{
+  margin-top: 150px;
+}
+.page p.divider{
+  padding-top: 1.5px;
+}
+.page .input-group .input-group-addon,
+.page .input-group .form-control{
+  border-radius: 0;
+}
