--- a/css/responsive.css
+++ b/css/responsive.css
@@ -74,6 +74,10 @@
   p{
     font-size: 15px;
   }
+  header div.row.first-content{
+    margin: 0;
+    padding: 0;
+  }
   .kategori, .promoted{
     display: block;
     width: 100%;
@@ -131,6 +135,9 @@
     border: 0;
     padding: 0;
   }
+  .featured{
+    padding: 0;
+  }
   .featured .media-left{
     display: block;
     width: 100%;
@@ -160,7 +167,7 @@
     font-size: 22px;
   }
   h4{
-    font-size: 13px;
+    font-size: 18px;
   }
   p{
     font-size: 12px;
@@ -170,8 +177,8 @@
   }
   .offer h4{
     padding-right: 10px;
-    font-size: .6em;
-    line-height: 18px;
+    font-size: .8em;
+    line-height: 1.5em;
     margin-bottom: 0;
   }
   .offer small{
@@ -183,7 +190,6 @@
     height: 30px;
     font-size: 8px;
     font-weight: bold;
-
   }
   .text-center-page{
     text-align: center;
