--- a/css/responsive.css
+++ b/css/responsive.css
@@ -71,6 +71,9 @@
 }
 
 @media screen and (max-width:480px) {
+  .media img.media-object{
+    transform-origin: center;
+  }
   p{
     font-size: 15px;
   }
